third_party/WebKit/Source/core/layout/LayoutBoxModelObject.cpp
@@ -555,7 +555,7 @@ LayoutBlock* LayoutBoxModelObject::containingBlockForAutoHeightDetection(Length 
     return cb;
 }
 
-bool LayoutBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight() const
+bool LayoutBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight(bool checkingContainingBlock) const
 {
     const LayoutBox* thisBox = isBox() ? toLayoutBox(this) : nullptr;
     Length logicalHeightLength = style()->logicalHeight();
@@ -567,6 +567,12 @@ bool LayoutBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight() const
         if (flexBox.childLogicalHeightForPercentageResolution(*thisBox) != LayoutUnit(-1))
             return false;
     }
+    if (thisBox && thisBox->isGridItem()) {
+        if (checkingContainingBlock && thisBox->hasOverrideLogicalContentHeight())
+            return false;
+        if (!checkingContainingBlock && thisBox->hasOverrideContainingBlockLogicalHeight())
+            return false;
+    }
     if (logicalHeightLength.isAuto())
         return true;
 
@@ -575,8 +581,13 @@ bool LayoutBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight() const
 
     // If the height of the containing block computes to 'auto', then it hasn't been 'specified explicitly'.
     if (cb)
-        return cb->hasAutoHeightOrContainingBlockWithAutoHeight();
+        return cb->hasAutoHeightOrContainingBlockWithAutoHeight(true);
     return false;
+}
+
+bool LayoutBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight() const
+{
+    return hasAutoHeightOrContainingBlockWithAutoHeight(false);
 }
 
 LayoutSize LayoutBoxModelObject::relativePositionOffset() const
