third_party/WebKit/Source/core/layout/LayoutBoxModelObject.h
@@ -376,6 +376,8 @@ private:
         return *m_rareData.get();
     }
 
+    bool hasAutoHeightOrContainingBlockWithAutoHeight(bool checkingContainingBlock) const;
+
     // The PaintLayer associated with this object.
     // |m_layer| can be nullptr depending on the return value of layerTypeRequired().
     std::unique_ptr<PaintLayer> m_layer;
